--- a/future.html
+++ b/future.html
@@ -19,7 +19,9 @@
 
   gtag('config', 'G-ZWG36BC7F6');
 </script>
-	<!-- Quotes found on https://www.impelfeed.com/article/female-quotes-from-the-marvel-cinematic-universe-part-1 & https://marvel.fandom.com/wiki/Category:Female_Characters-->
+	<!-- Quotes found on https://www.impelfeed.com/article/female-quotes-from-the-marvel-cinematic-universe-part-1 & https://marvel.fandom.com/wiki/Category:Female_Characters
+	Tutorial for help with filtering tool: https://codepen.io/lonekorean/pen/YXxxyj-->
+
 
 	<title>Future Women</title>
 </head>
@@ -123,7 +125,7 @@
 		  </li>
 		  <li id="wolverine" data-teams="original">
 			<h2>Captian Marvel</h2>
-			<img src="images/merlin_151018680_8b11e0d6-d5d0-4dc2-9b72-b5a46205b550-jumbo.jpeg" alt="Old version cartoon Carol Danvers/Captain Marvel with red coustime and Ms. Marvel in the back">
+			<img src="images/merlin_151018680_8b11e0d6-d5d0-4dc2-9b72-b5a46205b550-jumbo.jpeg" alt="Old version cartoon Carol Danvers/Captain Marvel with red coustume">
 		  </li>
 		</ul>
 	  </div>
@@ -131,7 +133,7 @@
 	  <h2>Powerful Quotes from the Marvel Universe</h2>
 	<p>Click through to see quotes from the Women in the Marvel Universe</p>
 
-<div class="slideshow-container">
+<div class="slideshow-container" >
 
 
 	<!-- Full-width slides/quotes -->
@@ -205,7 +207,7 @@ function showSlides(n) {
 <div class="row-2">
   <div class="column-2">
     <h2>Yelena</h2>
-    <p>She will be taking over the baton from Black Widow and becoming a warrior queen. She is depicted as a spy and the second modern era character to use the Black Widow name and start a new journey.</p>
+    <p>She will be taking over the baton from Black Widow and becoming a warrior queen. She is depicted as a spy and the second modern era character to use the Black Widow name and start a new journey in new upcoming films.</p>
   </div>
   <div class="column-2">
     <h2>Sersi</h2>
