--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       https://www.marvel.com/articles/comics/kitty-pryde-is-on-a-boat
       https://marvel-dc.fandom.com/wiki/Psylocke
       https://www.denofgeek.com/movies/captain-marvel-2-is-a-ms-marvel-and-monica-rambeau-team-up-movie/
+      Marvel Turotial to help with beginning: https://codepen.io/dannievinther/pen/EvVggR 
   -->
 
 
@@ -71,61 +72,61 @@
       <figure>
         <img src="images/image-20170213-15803-1i7jott.jpeg" alt="Ms. Marvel Cartoon Character">
         <figcaption>
-          <div><div><h3>Kamala</h3></div></div>
+          <div><div><h2>Kamala</h2></div></div>
         </figcaption>
       </figure>
       <figure>
         <img src="images/Uncanny_Inhumans_Vol_1_1_Cheung_Connecting_Variant_B_Textless.jpeg" alt=" Medusa Cartoon Character with red hair and purple custome ">
         <figcaption>
-          <div><div><h3>Medusa</h3></div></div>
+          <div><div><h2>Medusa</h2></div></div>
         </figcaption>
       </figure>
       <figure>
         <img src="images/val_featured.jpeg" alt="Blonde Cartoon Character Valrkyie with her hammer">
         <figcaption>
-          <div><div><h3>Valkryie</h3></div></div>
+          <div><div><h2>Valkryie</h2></div></div>
         </figcaption>
       </figure>
       <figure>
         <img src="images/Did8sdkWkAANkud.jpeg" alt="Psylocke Character with her blue custome and purple hair leaning downwards">
         <figcaption>
-          <div><div><h3>Psylocke</h3></div></div>
+          <div><div><h2>Psylocke</h2></div></div>
         </figcaption>
       </figure>
       <figure>
         <img src="images/dalb04y-014a0afa-181f-4bcb-8e70-4d64b7e456c9.jpeg" alt="Cartoon Singularity in all purple and white eyes ">
         <figcaption>
-          <div><div><h3>Singularity</h3></div></div>
+          <div><div><h2>Singularity</h2></div></div>
         </figcaption>
       </figure>
       <figure>
         <img src="images/Alison_Blaire.jpeg" alt="Blone cartoon Dazzler with a grey coustume and smiling">
         <figcaption>
-          <div><div><h3>Dazzler</h3></div></div>
+          <div><div><h2>Dazzler</h2></div></div>
         </figcaption>
       </figure>
       <figure>
         <img src="images/captain-marvel-2-kamala-khan.jpeg" alt="Old version cartoon Carol Danvers with red coustime and Ms. Marvel in the back ">
         <figcaption>
-          <div><div><h3>Carol Danvers</h3></div></div>
+          <div><div><h2>Carol Danvers</h2></div></div>
         </figcaption>
       </figure>
       <figure>
         <img src="images/0_6acd_0.jpeg" alt=" Dani Moonstar is her godess costume holding bow and arrow">
         <figcaption>
-          <div><div><h3>Dani Moonstar</h3></div></div>
+          <div><div><h2>Dani Moonstar</h2></div></div>
         </figcaption>
       </figure>
       <figure>
         <img src="images/Gamora_Zen_Whoberi_Ben_Titan_(Earth-7528)_from_Guardians_of_the_Galaxy_Vol_6_13_cover_001.jpeg" alt=" Green cartoon Gamora lunging with a sword">
         <figcaption>
-          <div><div><h3>Gamora</h3></div></div>
+          <div><div><h2>Gamora</h2></div></div>
         </figcaption>
       </figure>
       <figure>
         <img src="images/Black-Widow-Widows-Sting-Marvel-Comic.jpeg" alt="Black Widow with logo covering her eye">
         <figcaption>
-          <div><div><h3>Black Widow</h3></div></div>
+          <div><div><h2>Black Widow</h2></div></div>
         </figcaption>
       </figure>
     </section>
