--- a/timeline.html
+++ b/timeline.html
@@ -64,7 +64,7 @@
 				</div>
 				<div class="content-4">
 					<h2>The New Era</h2>
-					<p>In 1997, Ms. Marvel was introduced. Phoneix, Poliris, and the first female back hero, Storm, was introducd. In the 1980s, women started seeing their first leadership roles in movies like the Fanstiasic Four.</p>
+					<p>In 1997, Ms. Marvel was introduced. Phoneix, Poliris, and the first female back hero, Storm, was introduced. In the 1980s, women started seeing their first leadership roles in movies like the Fanstiasic Four from Susan Storm-Richards.</p>
 				</div>
 			</div>
 			<div class="single-box">
@@ -74,7 +74,7 @@
 				</div>
 				<div class="content-4">
 					<h2>Era of Queer Identities</h2>
-					<p>Tank Girl was created to present a new modern women and to verge on queer identities. Tank Girl works to fight againist the mega-coroporations to restore natural environments.</p>
+					<p>Tank Girl was created to present a new modern women and to verge on queer identities. Tank Girl works to fight againist the mega-coroporations to restore natural environments. Tank girl began to pave the way for a more diverse set of female characters in the Marvel Universe.</p>
 				</div>
 			</div>
 			<div class="box-right">
@@ -104,7 +104,7 @@
 				</div>
 				<div class="content-4">
 					<h2>The Era of Scarlett Witch</h2>
-					<p>The newest character was introduced as the powerful Scarlett Witch to the universe. The Scarlett Witch have gone on to become some of the most powerful character in the universe with mutlipe films produced. Jane Foster and Storm comics are released.</p>
+					<p>The newest character was introduced as the powerful Scarlett Witch to the universe. The Scarlett Witch has gone on to become one of the most powerful characters in the universe with mutlipe films produced. Jane Foster and Storm comics are released to lead way to more modern day film leads.</p>
 				</div>
 			</div>
 			<div class="single-box">
@@ -114,7 +114,7 @@
 				</div>
 				<div class="content-4">
 					<h2>New Fierece Women</h2>
-					<p>Marvel gave more screentime to Black Widow and She-Hulk came up as a powerful force after getting a dose of gamma radiated blood and becoming the sensational She-Hulk. She is also a part-time attonery.  </p>
+					<p>Marvel gave more screentime to Black Widow and She-Hulk, who came up as a powerful force after getting a dose of gamma radiated blood and becoming the sensational She-Hulk. She is also a part-time attonery, which gives way to a more diverse group of smart female characters.  </p>
 				</div>
 			</div>
 			<div class="box-right">
@@ -124,7 +124,7 @@
 				</div>
 				<div class="content-4">
 					<h2>First Female feature</h2>
-					<p>The first female feature film Captian Marvel was realeased and Spider-Gwen got her moment on screen. Captian Marvel will continue to pave the way with the addition of new female leads in subsequent movies. Shuri is introduced in comics.  /p>
+					<p>The first female feature film Captian Marvel was realeased and Spider-Gwen got her moment on screen. Captian Marvel will continue to pave the way with the addition of new female leads in subsequent movies. Shuri is introduced in comics. Shuri is thought to become the next leader of Wakanda and star in upcoming films.  </p>
 				</div>
 			</div>
 			<div class="single-box">
@@ -134,7 +134,7 @@
 				</div>
 				<div class="content-4">
 					<h2>Female Team Leader</h2>
-					<p>This verteran X-Women becomes a captian of her own crew in his piratical series that takes place in teh mutant lands of Krakoa.  </p>
+					<p>This verteran X-Women becomes a captian of her own crew in his piratical series that takes place in the mutant lands of Krakoa.  </p>
 				</div>
 			</div>
 			<div class="box-right">
@@ -144,7 +144,7 @@
 				</div>
 				<div class="content-4">
 					<h2>The Powerful Future</h2>
-					<p>We have epic new movies like Black Widow, WandaVision, and Shang-Chi that draw on strong female characters. Released this year, the Enterals has 3 female leads and will pave the way for many more to come in the next years.  </p>
+					<p>We have epic new movies like Black Widow, WandaVision, and Shang-Chi that draw on strong female characters. Released this year, the Enterals has 3 female leads and will pave the way for many more to come in the next years. It is thought that in the future adaptions of Thor and Loki, more females leads will pave the way.   </p>
 				</div>
 			</div>
 		</div>
