--- a/future.html
+++ b/future.html
@@ -207,18 +207,18 @@ function showSlides(n) {
 <div class="row-2">
   <div class="column-2">
     <h2>Yelena</h2>
-    <p>She will be taking over the baton from Black Widow and becoming a warrior queen. She is depicted as a spy and the second modern era character to use the Black Widow name and start a new journey in new upcoming films.</p>
+    <p>She will be taking over the baton from Black Widow and becoming a warrior queen. She is depicted as a spy and the second modern era character to use the Black Widow name and is starting a new journey in upcoming films.</p>
   </div>
   <div class="column-2">
     <h2>Sersi</h2>
-    <p>Sersi will star in the Etnerals, she has the ability to manipulate every matter. She is often a socializer that gathers together the Eternals. She has been known to scarfice her self for the common good at all times. </p>
+    <p>Sersi will star in the Etnerals, she has the ability to manipulate every matter. She is often a socializer that gathers together the Eternals. She has been known to sacrifice her self for the common good at all times. </p>
   </div>
 </div>
 
 <div class="row-2">
   <div class="column-2">
     <h2>Thena</h2>
-    <p>Thena will star in the Etnerals and has the ability to be a very strong warrior. Thena has held the highest title of Prime Eternal and also a known elaborate socializer.</p>
+    <p>Thena will star in the Etnerals and has the ability to be a very strong warrior. Thena has held the highest title of Prime Eternal and is also a known elaborate socializer.</p>
   </div>
   <div class="column-2">
     <h2>Shuri</h2>
@@ -229,7 +229,7 @@ function showSlides(n) {
 <div class="row-2">
 	<div class="column-2">
 	  <h2>Ajak</h2>
-	  <p>Ajak will star in the Enterals and is the spirtual and knowledgeable leader. Ajak purpose in life is to pave the way for Earth's Emergence.  </p>
+	  <p>Ajak will star in the Enterals and is the spirtual and knowledgeable leader. Ajak's purpose in life is to pave the way for Earth's Emergence.  </p>
 	</div>
 	<div class="column-2">
 	  <h2>Jane</h2>
