--- a/timeline.html
+++ b/timeline.html
@@ -94,7 +94,7 @@
 				</div>
 				<div class="content-4">
 					<h2>The Wasp</h2>
-					<p>Janet Van Dyke is the Wasp. She is a founding Avenger and the first to become one of the mighest. She will go on to have her own daughter become the next wasp and to lead a group of avengers. </p>
+					<p>Janet Van Dyke is the Wasp. She is a founding Avenger and the first to become one of the strongest. She will go on to have her own daughter become the next wasp and to lead a group of avengers. </p>
 				</div>
 			</div>
 			<div class="box-right">
@@ -124,7 +124,7 @@
 				</div>
 				<div class="content-4">
 					<h2>First Female feature</h2>
-					<p>The first female feature film Captian Marvel was realeased and Spider-Gwen got her moment on screen. Captian Marvel will continue to pave the way with the addition of new female leads in subsequent movies. Shuri is introduced in comics. Shuri is thought to become the next leader of Wakanda and star in upcoming films.  </p>
+					<p>The first female feature film Captain Marvel was realeased and Spider-Gwen got her moment on screen. Captain Marvel will continue to pave the way with the addition of new female leads in subsequent movies. Shuri is introduced in comics. Shuri is thought to become the next leader of Wakanda and star in upcoming films.  </p>
 				</div>
 			</div>
 			<div class="single-box">
@@ -134,7 +134,7 @@
 				</div>
 				<div class="content-4">
 					<h2>Female Team Leader</h2>
-					<p>This verteran X-Women becomes a captian of her own crew in his piratical series that takes place in the mutant lands of Krakoa.  </p>
+					<p>This verteran X-Women becomes a captain of her own crew in his piratical series that takes place in the mutant lands of Krakoa.  </p>
 				</div>
 			</div>
 			<div class="box-right">
@@ -144,7 +144,7 @@
 				</div>
 				<div class="content-4">
 					<h2>The Powerful Future</h2>
-					<p>We have epic new movies like Black Widow, WandaVision, and Shang-Chi that draw on strong female characters. Released this year, the Enterals has 3 female leads and will pave the way for many more to come in the next years. It is thought that in the future adaptions of Thor and Loki, more females leads will pave the way.   </p>
+					<p>We have epic new movies like Black Widow, WandaVision, and Shang-Chi that draw on strong female characters. Released this year, the Enterals has 3 female leads and will pave the way for many more to come in the next years. It is thought that in the future adaptions of Thor and Loki, more female leads will pave the way.   </p>
 				</div>
 			</div>
 		</div>
