--- a/women.html
+++ b/women.html
@@ -47,13 +47,13 @@
 	<div class="cards">
 		<div class="card">
 			<img src="images/Brie-Larson-as-Carol-Danvers-Captain-Marvel.jpeg" alt="Captian Marvel, only first female feature film">
-			<h2>Carol Davers/Captian Marvel</h2>
+			<h2>Carol Davers/Captain Marvel</h2>
 			<p>The First Female in MCU to get her own movie</p>
 		</div>
 		<div class="card">
 			<img src="images/Scarlet-witch-Spells-in-the-darkhold-comics-wandavision.jpeg" alt="Wanda Maximoff or the Scarlett Witch, powerful avenger ">
 			<h2>Wanda Maximoff/Scarlett Witch</h2>
-			<p>Wanda contends with Captian Marvel for the most powerful hero</p>
+			<p>Wanda contends with Captain Marvel for the most powerful hero</p>
 		</div>
 		<div class="card">
 			<img src="images/Letitia-Wright-Shuri-Black-Panther.jpeg" alt="Suri">
@@ -88,7 +88,7 @@
 		<div class="card">
 			<img src="images/Gemma-Chan-as-Sersi-in-Eternals.jpeg" alt="Sersi">
 			<h2>Sersi</h2>
-			<p>Busy mainpulating power to her will</p>
+			<p>Busy manipulating power to her will</p>
 		</div>
 		<div class="card">
 			<img src="images/Evangeline-Lilly-as-Hope-van-Dyne-The-Wasp.jpeg" alt="Hope Van Dyke, the new wasp with expert brains">
@@ -133,13 +133,13 @@
 		<div class="card">
 			<img src="images/Hailee-Steinfeld-Kate-Bishop-Hawkeye-SR.jpeg" alt="Kate Biship/Hawkeye, the new Hawkeye Girl">
 			<h2>Kate Biship/Hawkeye</h2>
-			<p>Even better archers and figther than her main counterpart</p>
+			<p>Even better archer and figther than her main counterpart</p>
 		</div>
 
 		<div class="card">
 			<img src="images/Danai-Gurira-as-Okoye-in-the-MCU-and-Marvel-Comics.jpeg" alt="Okoye a very skilled warrior">
 			<h2>Okoye</h2>
-			<p>Skilled Combant & Most Loyal</p>
+			<p>Skilled in combat & Most Loyal</p>
 		</div>
 
 		<div class="card">
@@ -163,7 +163,7 @@
 		<div class="card">
 			<img src="images/Kathryn-Newton-as-Cassie-Lang-aka-Stature-in-Ant-Man-and-the-Wasp-Quantumania.jpeg" alt="Stature, new Wasp Character">
 			<h2>Stature</h2>
-			<p>Daugther of an Avenger, ready to take on her own</p>
+			<p>Daugther of an Avenger, ready to take on her own destiny</p>
 		</div>
 
 		<div class="card">
