--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <h2>The Women</h2>
             </div>
             <p class="card__text">
-              View all the Current Women in the Marvel Unviverse, with photos and a short description. These women represent new and old forces that are leading the way for a more female lead Marvel Universe. From Capatian Marvel to Miss America, see how the unvierse is envoling in younger generations.
+              View all the Current Women in the Marvel Unviverse, with photos and a short description. These women represent new and old forces that are leading the way for a more female driven Marvel Universe. From Capatain Marvel to Miss America, see how the unvierse is envoling in younger generations.
             </p>
             <a href="women.html" class="btn--block-2">Women Page</a>
           </div>
@@ -173,7 +173,7 @@
             <div class="card__title">
               <h2>The Future</h2>
             </div>
-            <p class="card__text">Find infomration regarding the future of women in Marvel and the upcoming movies and women joining the universe. There is a new wave of women joining the universe these next two years. From teenagers to long standing cast members, the women are taking over and becoming more diverse.</p>
+            <p class="card__text">Find information regarding the future of women in Marvel and the upcoming movies, along with the women joining the universe. There is a new wave of women joining the universe these next two years. From teenagers to long standing cast members, the women are taking over and becoming more diverse.</p>
             <a href="future.html" class="btn--block-2">Future Page</a>
           </div>
         </div>
@@ -188,7 +188,7 @@
               <h2>Timeline</h2>
             </div>
             <p class="card__text">
-              See a timeline of the evolution of women in Marvel Movies stemming from the 1980s to present day. The Women of the Marvel Universe have expanded immensely to include stronger female leads in leading roles. From sidekicks to fierce main characters, the Marvel Universe is becoming more female based.
+              See a timeline of the evolution of women in Marvel Movies stemming from the 1980s to present day. The Women of the Marvel Universe have expanded immensely to include stronger female leads in main roles. From sidekicks to fierce main characters, the Marvel Universe is becoming more female based.
             </p>
               <a href="timeline.html" class="btn--block-2">Timeline Page</a>
           </div>
